--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ section {
     width: 500px;
     border: solid 3px #024e76;
     position: absolute;
-    bottom: 120px;
+    bottom: 70px;
     right: 140px;
 }
 
@@ -147,18 +147,18 @@ section {
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
     display: inline-block;
-    border: 3px solid ;
+    border-bottom: 3px solid ;
     color: #024e76;
 }
 
 
 
 .primary-border {
-    border: #fce138;
+    border-color: #fce138;
 }
 
 .secondary-border {
-    border: #39a6b2;
+    border-color: #39a6b2;
 }
 
 .steps div {
@@ -230,57 +230,45 @@ section {
     line-height: 1.3;
 }
 
-.contact {
-    text-align: center;
-    background: #024e76;
+.contact-info iframe {
+    height: 400px;
+    width: 400px;
 }
-
-
+#reach-out{
+    background-color: #024e76;
+    text-align: center;
+}
 .contact h2 {
     color: #fce138;
-    text-align: center;
-}
-
-.contact-info iframe{
-    width: 400px;
-    height: 400px;
-    padding: 35px;
-    float: left;
-    text-align: center;
-
-    position: relative;
-    bottom: 55px;
-    left: 12%;
-    margin-right: 180px;
-    
     
 }
 
-.contact-info1 {
+
+
+.contact-info div{
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
     color: white;
 }
 
-.contact-info1 h3{
+.contact-info h3 {
     color: #fce138;
     font-size: 32px;
-    text-align: left;
 }
 
-.contact-info1 p, .contact-info1 address{
+.contact-info p, .contact-info address {
     margin: 20px 0;
-    line-height:1.5;
+    line-height: 1.5;
     font-size: 20px;
     font-style: normal;
-    display: block;
-    text-align: left;
-    
-   
 }
 
-.contact-info1 a{
+.contact-info a {
     color: #fce138;
 }
-
 .hero {
     margin: 20px;
     font-size: 20px;
@@ -293,6 +281,8 @@ section {
     background:black;
     color: red;
 }
+
+
 
 
 
