--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,8 +115,6 @@ section {
     border: solid 3px #024e76;
    width: 40%;
    margin: 3.5%;
-    
-    
 }
 
  .hero-form h3{
@@ -151,9 +149,7 @@ section {
     font-size: 16px;
 }
 
-.intro{
-    text-align: center;
-}
+
 
 
 
@@ -163,18 +159,20 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
+    
     background: #fce138;
 }
 
 .section-title{
     font-size: 55px;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
     border-bottom: 3px solid ;
     color: #024e76;
 }
@@ -189,28 +187,58 @@ section {
     border-color: #39a6b2;
 }
 
-.steps div {
-    margin-bottom: 80px;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content:space-between;
 }
 
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
 
-.steps h3 {
+
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
+    
 }
 
+.step-text p {
+    font-size: 18px;
+}
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+
+.step-info {
+    flex:  2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
+}
+
+.step-text {
+    flex: 12;
 }
 
 .trainers {
-    text-align: center;
+    
     
 }
 
@@ -240,6 +268,10 @@ section {
 
 .text-right {
     text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
 
 .trainer-bio h3 {
@@ -277,7 +309,7 @@ section {
     width: 410px;
     display: inline-block;
     vertical-align: top;
-    text-align: left;
+    
     margin: 30px 0 0 60px;
     color: white;
 }
