--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight:lighter;
     font-size: 1.55vw;
 }
@@ -91,6 +91,7 @@ section {
     display:flex;
     justify-content: center;
     flex-wrap:wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -99,7 +100,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size:  18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -168,7 +169,7 @@ section {
 }
 
 .section-title{
-    font-size: 55px;
+    font-size: 48px;
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
@@ -337,7 +338,7 @@ section {
 .contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
     display: block;
-    padding: 7px 15px;
+    padding: 7px 5px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
@@ -369,6 +370,18 @@ section {
 .secondary-content{
     background:black;
     color: red;
+}
+
+@media screen and (max-width: 980px) {
+    
+}
+
+@media screen and (max-width: 768px){
+   
+}
+
+@media screen and (max-width:575px){
+    
 }
 
 
