pseudo classes styling sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,15 +17,24 @@ header{
     display:flex;
     justify-content: space-between;
     flex-wrap:wrap;
-    
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url(../images/hero-bg.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
+
+
 
 header h1{
     font-weight:bold;
     font-size:36px;
     color: #fce138;
     margin:0;
-    
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     
 }
 
@@ -52,6 +61,15 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight:lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba( 0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+    
 }
 
 footer {
@@ -92,6 +110,8 @@ section {
     justify-content: center;
     flex-wrap:wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -107,15 +127,18 @@ section {
     font-style:italic;
     font-size:55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form{
     color:#024e76 ;
-    background-color:#fce138;
+    background-color: rgba(252, 225 , 56, 0.8);
     padding: 20px;
     border: solid 3px #024e76;
    width: 40%;
    margin: 3.5%;
+   box-shadow: 0 0 10px rgba( 0, 0, 0, 0.5);
+   border-radius: 15px;
 }
 
  .hero-form h3{
@@ -136,6 +159,13 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75)
+}
+
+.form-input:focus{
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .hero-form label{
@@ -148,10 +178,14 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 
-
+.hero-form button:hover {
+    background-color: #39a6b2;
+}
 
 
 .intro p {
@@ -192,11 +226,15 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+    
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content:space-between;
+}
+
+.step:not(:last-child){
+    border-bottom: 1px solid #39a6b2;
 }
 
 
@@ -344,6 +382,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
 }
 
 .contact-form button {
@@ -354,6 +393,23 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.contact-form input, .contact-form textarea{
+    background-color:rgba(255, 255, 255, 0.75);
+    outline: none;
+    
+}
+
+.contact-form input:focus, .contact-form textarea:focus{
+    background-color:rgba(255, 255, 255, 1)
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 .contact-info a {
@@ -376,7 +432,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
-
+        position: relative;
     }
     header h1 {
         width: 100%;
@@ -389,6 +445,7 @@ section {
     }
     header nav ul li a {
         font-size: 20px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
     footer h2, footer div {
         text-align: center;
@@ -397,9 +454,16 @@ section {
 
     .hero-cta, .hero-form {
         width: 100%;
+        
     }
+
+
     .hero-cta {
         text-align:center;
+    }
+
+    .hero-cta h2 {
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     .section-title {
@@ -469,9 +533,6 @@ section {
     }
 
 }
-
-    
-
 
 
 
